header alignment fixed

--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,29 @@
   background-color: #D0A600; */
   clip-path: polygon(0% 1.5%, 100% 0%, 100.1% 68.3%, 20.8% 68.3%);
 }
+
+@media (max-width: 768px) {
+  ::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  height: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #b8c1c9;
+  width: 5px;
+  height: 20px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
